--- a/szamitogephalozatok/WebApplication1/wwwroot/hajos.css
+++ b/szamitogephalozatok/WebApplication1/wwwroot/hajos.css
@@ -24,9 +24,11 @@ div {
 }
 
 #valaszok {
+    display:flex;
     flex-grow: 1;
     shrink: 1;
     background-color: rgb(0, 161, 112);
+    width:auto;
 }
 
 #kep {
@@ -34,7 +36,7 @@ div {
     flex-shrink: 1;
     flex-shrink: 1;
     flox-grow: 1;
-    background-color: rgb(0, 161, 112)
+    background-color: red;
 }
 
 #vezerlo {
@@ -45,9 +47,10 @@ div {
 }
 
 .kattinthato:hover {
+    display:flex;
     background-color: RGB(239, 2, 80) !important;
     font-weight: bold;
-    padding: 10px
+    padding: 20px
 }
 
 .gomb {
@@ -55,7 +58,10 @@ div {
     background-color: rgb(0, 161, 112)
 }
 
-#valasz1, #valasz2, #valasz3 {
+#1, #2, #3 {
+    display:flex;
+    flex-direction:row!important;
     background-color: RGB(225, 93, 68)
+
 }
 
