--- a/szamitogephalozatok/WebApplication1/wwwroot/hajos.css
+++ b/szamitogephalozatok/WebApplication1/wwwroot/hajos.css
@@ -1,19 +1,21 @@
 ﻿body {
 }
 html, body {
-    height: 100%
+    height: 95%;
+    background-color: RGB(225, 93, 68);
 }
 
 div {
     border-radius: 10px;
-    margin: 20px;
+    margin: 10px;
 }
 
 #kulso {
-    height: 100%;
+   
     display: flex;
     flex-direction: column;
     background-color: RGB(225, 93, 68);
+    height: 100%;
 }
 
 #kozep {
@@ -26,17 +28,18 @@ div {
 #valaszok {
     display:flex;
     flex-grow: 1;
-    shrink: 1;
+    flex-shrink: 1;
     background-color: rgb(0, 161, 112);
     width:auto;
+    flex-direction:column;
 }
 
 #kep {
     overflow: hidden;
     flex-shrink: 1;
     flex-shrink: 1;
-    flox-grow: 1;
-    background-color: red;
+    flex-grow: 1;
+    background-color: rgb(0, 161, 112);
 }
 
 #vezerlo {
@@ -54,14 +57,22 @@ div {
 }
 
 .gomb {
-    padding: 20px;
-    background-color: rgb(0, 161, 112)
-}
-
-#1, #2, #3 {
     display:flex;
-    flex-direction:row!important;
-    background-color: RGB(225, 93, 68)
-
+    padding: 20px;
+    background-color: rgb(0, 161, 112);
 }
 
+ #válaszok{
+    display:flex;
+    flex-direction:column!important;
+    background-color: RGB(225, 93, 68);
+    max-width :30%;
+    
+}
+
+.rossz {background-color : red;
+        color:white;
+}
+.jó {background-color:forestgreen;
+     color : white;
+}
